tests/NormalTests/paczka1/small_fuzzy/26508650.err
Error in line 1: r3d S446 87,4
Error in line 14: iIw S446 6i,2
